base-2/apps/frontend/lh_staff_frontend/ingress-frontend-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressstafffrontend
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: certificate_arn
    alb.ingress.kubernetes.io/backend-protocol-version: HTTP2
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/group.name: ingresslinearhealth
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-node-labels: Name=nodegroup
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  rules:
    - host:
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
             service:
              name: servicestafffrontend
              port:
                number: 80
